--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ path = "src/ch05/ch05_exercise02.rs"
 name = "ch05_exercise03"
 path = "src/ch05/ch05_exercise03.rs"
 
+[[bin]]
+name = "ch05_exercise04"
+path = "src/ch05/ch05_exercise04.rs"
+
 [dependencies]
 plotters = "0.3.7"
 textplots = "0.8.6"
