--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ path = "src/ch05/ch05_exercise04.rs"
 name = "ch05_exercise06"
 path = "src/ch05/ch05_exercise06.rs"
 
+[[bin]]
+name = "ch05_exercise07"
+path = "src/ch05/ch05_exercise07.rs"
+
 [dependencies]
 plotters = "0.3.7"
 textplots = "0.8.6"
