--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ path = "src/ch05/ch05_exercise06.rs"
 name = "ch05_exercise07"
 path = "src/ch05/ch05_exercise07.rs"
 
+[[bin]]
+name = "ch05_exercise08"
+path = "src/ch05/ch05_exercise08.rs"
+
 [dependencies]
 plotters = "0.3.7"
 textplots = "0.8.6"
