--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,6 @@ name = "ch05_exercise08"
 path = "src/ch05/ch05_exercise08.rs"
 
 [dependencies]
+ndarray = "0.16.1"
 plotters = "0.3.7"
 textplots = "0.8.6"
