--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ path = "src/ch05/ch05_exercise08.rs"
 name = "ch05_exercise09"
 path = "src/ch05/ch05_exercise09.rs"
 
+[[bin]]
+name = "ch05_exercise10"
+path = "src/ch05/ch05_exercise10.rs"
+
 [dependencies]
 ndarray = "0.16.1"
 plotters = "0.3.7"
