--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,10 @@ path = "src/ch05/ch05_exercise09.rs"
 name = "ch05_exercise10"
 path = "src/ch05/ch05_exercise10.rs"
 
+[[bin]]
+name = "ch05_exercise11"
+path = "src/ch05/ch05_exercise11.rs"
+
 [dependencies]
 ndarray = "0.16.1"
 plotters = "0.3.7"
