--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,10 @@ path = "src/ch05/ch05_exercise10.rs"
 name = "ch05_exercise11"
 path = "src/ch05/ch05_exercise11.rs"
 
+[[bin]]
+name = "ch05_exercise12"
+path = "src/ch05/ch05_exercise12.rs"
+
 [dependencies]
 ndarray = "0.16.1"
 plotters = "0.3.7"
