--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,10 @@ path = "src/ch05/ch05_exercise11.rs"
 name = "ch05_exercise12"
 path = "src/ch05/ch05_exercise12.rs"
 
+[[bin]]
+name = "ch05_exercise13"
+path = "src/ch05/ch05_exercise13.rs"
+
 [dependencies]
 ndarray = "0.16.1"
 plotters = "0.3.7"
